# yt-transcriber

./: .gitignore  Cargo.toml  install.sh
docs/: README.md
src/: main.rs
